# coursework-v3.0

./: CMakeLists.txt  script_merger  Записка.docx  Лист задания.docx  Титульный лист.docx
Inc/: BaseTab.h  CircuitComponent.h  ExceptionHandler.h  Filter.h  GraphRenderer.h  ImageProcessor.h  InvOpamp.h  InvertingOpamp.h  LM317.h  LowpassRC.h  NonInvOpamp.h  NonInvertingOpamp.h  Opamp.h  Regulator.h  TL431.h  TabBase.h  TabOpamp.h  TabRCfilter.h  TabRegulator.h  TabTools.h  TextManipulator.h  app.h  calculations.h  circuitComponent.h  filter.h  imageProcessor.h  lowpassLC.h  lowpassRC.h  magic.h  main.h  opamp.h  regulator.h  tabLCfilter.h  tabLM317.h  tabRCfilter.h  tabRegulator.h  tabTL431.h  tabdivider.h  tabfilter.h  tabopamp.h  (+1 more)
Resources/: Thumbs.db  help.txt  info.txt  myapp.icns
Src/: CircuitComponent.cpp  ExceptionHandler.cpp  GraphRenderer.cpp  ImageProcessor.cpp  InvOpamp.cpp  InvertingOpamp.cpp  LM317.cpp  LowpassRC.cpp  NonInvOpamp.cpp  NonInvertingOpamp.cpp  TL431.cpp  TabBase.cpp  TabOpamp.cpp  TabRCfilter.cpp  TabRegulator.cpp  TabTools.cpp  TextManipulator.cpp  app.cpp  calculations.cpp  circuitComponent.cpp  imageProcessor.cpp  lowpassLC.cpp  lowpassRC.cpp  main.cpp  opamp.cpp  tabLCfilter.cpp  tabLM317.cpp  tabRCfilter.cpp  tabRegulator.cpp  tabTL431.cpp  tabdivider.cpp  tabfilter.cpp  tabopamp.cpp  textManipulations.cpp
